<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#021F4B"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile app"
        android:textSize="30dp"
        android:textColor="#FFBF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck" />

    <TextView
        android:id="@+id/Display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelName"
        android:textColor="#11FD00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/input"
        android:inputType="text"
        android:textColor="#e10c0c"
        android:textColorHint="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Age"
        android:textColor="#00FF19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/ageinput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/ageInput"
        android:inputType="text"
        android:textColor="#e10c0c"
        android:textColorHint="#FFE500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:textColor="#00FF0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/adresInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/AdresInput"
        android:inputType="text"
        android:textColor="#e10c0c"
        android:textColorHint="#FFBF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/natio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Natio"
        android:textColor="#26FB00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/NatioInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/NatioInput"
        android:inputType="text"
        android:textColor="#C39C2A"
        android:textColorHint="#FFBF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_contrainstBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/showName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:text=""
        app:layout_contrainstBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/displayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/generate" />

    <TextView
        android:id="@+id/showAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e10c0c"
        android:text=""
        app:layout_contrainstBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/showAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e10c0c"
        android:text=""
        app:layout_contrainstBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/showNatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e10c0c"
        android:text=""
        app:layout_contrainstBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>